fix navbar on mobile devices

--- a/src/assets/less/theme.less
+++ b/src/assets/less/theme.less
@@ -162,7 +162,7 @@
 // Off-canvas
 //
 
-@offcanvas-bar-background:                      #fff;
+@offcanvas-bar-background:                      #2e2e2e;
 @offcanvas-bar-color-mode:                      dark;
 
 //
